# RegularLibrary

./: .gitignore  CMakeLists.txt  Export.h  README.md  RegularLibrary.cpp  RegularLibrary.h  library.h
Core/: AsciiString.cpp  AsciiString.h  Expected.cpp  Expected.h  IIOStream.h  IStream.cpp  IStream.h  List.cpp  List.h  Math.cpp  Math.h  MemoryConsumer.cpp  MemoryConsumer.h  Pair.cpp  Pair.h  UnicodeString.cpp  UnicodeString.h
System/: Allocator.MacOS.cpp  Allocator.Windows.cpp  Allocator.h  Console.Linux.cpp  Console.Windows.cpp  Console.h  File.Windows.cpp  File.h  FileIOStream.Linux.cpp  FileIOStream.Windows.cpp  FileIOStream.h  FileStream.Windows.cpp  FileStream.h  NetworkProvider.Windows.cpp  NetworkProvider.h  TCPClient.Windows.cpp  TCPClient.h
